--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div>
+        <div class="seven">7</div>
+        <div class="eight">8</div>
+        <div class="nine">9</div>
+        <div class="dividBtn">/</div>
+        <div class="four">4</div>
+        <div class="five">5</div>
+        <div class="six">6</div>
+        <div class="multBtn">*</div>
+        <div class="three">3</div>
+        <div class="two">2</div>
+        <div class="one">1</div>
+        <div class="subBtn">-</div>
+        <div class="dotBtn">.</div>
+        <div class="zero">0</div>
+        <div class="equalsBtn">=</div>
+        <div class="addBtn">+</div>
+    </div>
     <script src="./script.js"></script>
 </body>
+
 </html>
