--- a/index.html
+++ b/index.html
@@ -5,27 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
 </head>
 
 <body>
-    <div>
-        <div class="seven">7</div>
-        <div class="eight">8</div>
-        <div class="nine">9</div>
-        <div class="dividBtn">/</div>
-        <div class="four">4</div>
-        <div class="five">5</div>
-        <div class="six">6</div>
-        <div class="multBtn">*</div>
-        <div class="three">3</div>
-        <div class="two">2</div>
-        <div class="one">1</div>
-        <div class="subBtn">-</div>
-        <div class="dotBtn">.</div>
-        <div class="zero">0</div>
-        <div class="equalsBtn">=</div>
-        <div class="addBtn">+</div>
+    <div class="buttons-grid">
+        <button class="seven">7</button>
+        <button class="eight">8</button>
+        <button class="nine">9</button>
+        <button class="dividBtn">/</button>
+
+        <button class="four">4</button>
+        <button class="five">5</button>
+        <button class="six">6</button>
+        <button class="multBtn">*</button>
+
+        <button class="three">3</button>
+        <button class="two">2</button>
+        <button class="one">1</button>
+        <button class="subBtn">-</button>
+
+        <button class="dotBtn">.</button>
+        <button class="zero">0</button>
+        <button class="equalsBtn">=</button>
+        <button class="addBtn">+</button>
     </div>
     <script src="./script.js"></script>
 </body>
