created cal div

--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
 </head>
 
 <body>
-    <div class="buttons-grid">
-        <button class="seven">7</button>
-        <button class="eight">8</button>
-        <button class="nine">9</button>
-        <button class="dividBtn">/</button>
+    <div class="calculator">
+        <div class="buttons-grid">
+            <button class="seven">7</button>
+            <button class="eight">8</button>
+            <button class="nine">9</button>
+            <button class="dividBtn">/</button>
 
-        <button class="four">4</button>
-        <button class="five">5</button>
-        <button class="six">6</button>
-        <button class="multBtn">*</button>
+            <button class="four">4</button>
+            <button class="five">5</button>
+            <button class="six">6</button>
+            <button class="multBtn">*</button>
 
-        <button class="three">3</button>
-        <button class="two">2</button>
-        <button class="one">1</button>
-        <button class="subBtn">-</button>
+            <button class="three">3</button>
+            <button class="two">2</button>
+            <button class="one">1</button>
+            <button class="subBtn">-</button>
 
-        <button class="dotBtn">.</button>
-        <button class="zero">0</button>
-        <button class="equalsBtn">=</button>
-        <button class="addBtn">+</button>
+            <button class="dotBtn">.</button>
+            <button class="zero">0</button>
+            <button class="equalsBtn">=</button>
+            <button class="addBtn">+</button>
+        </div>
     </div>
     <script src="./script.js"></script>
 </body>
