--- a/index.html
+++ b/index.html
@@ -11,26 +11,30 @@
 
 <body>
     <div class="calculator">
+        <div class="top-row">
+            <div class="screen">0</div>
+            <button class="clear">AC</button>
+        </div>
         <div class="buttons-grid">
-            <button class="seven">7</button>
-            <button class="eight">8</button>
-            <button class="nine">9</button>
-            <button class="dividBtn">/</button>
+            <button class="btn">7</button>
+            <button class="btn">8</button>
+            <button class="btn">9</button>
+            <button class="btn">/</button>
 
-            <button class="four">4</button>
-            <button class="five">5</button>
-            <button class="six">6</button>
-            <button class="multBtn">*</button>
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn">*</button>
 
-            <button class="three">3</button>
-            <button class="two">2</button>
-            <button class="one">1</button>
-            <button class="subBtn">-</button>
+            <button class="btn">3</button>
+            <button class="btn">2</button>
+            <button class="btn">1</button>
+            <button class="btn">-</button>
 
-            <button class="dotBtn">.</button>
-            <button class="zero">0</button>
-            <button class="equalsBtn">=</button>
-            <button class="addBtn">+</button>
+            <button class="btn">.</button>
+            <button class="btn">0</button>
+            <button class="btn">=</button>
+            <button class="btn">+</button>
         </div>
     </div>
     <script src="./script.js"></script>
