--- a/index.html
+++ b/index.html
@@ -12,29 +12,32 @@
 <body>
     <div class="calculator">
         <div class="top-row">
-            <div class="screen">0</div>
-            <button class="clear">AC</button>
+            <div class="screen">
+                <div class="previous"></div>
+                <div class="current"></div>
+            </div>
+            <button class="btn clear">AC</button>
         </div>
         <div class="buttons-grid">
-            <button class="btn">7</button>
-            <button class="btn">8</button>
-            <button class="btn">9</button>
-            <button class="btn">/</button>
+            <button class="btn number">7</button>
+            <button class="btn number">8</button>
+            <button class="btn number">9</button>
+            <button class="btn operator">/</button>
 
-            <button class="btn">4</button>
-            <button class="btn">5</button>
-            <button class="btn">6</button>
-            <button class="btn">*</button>
+            <button class="btn number">4</button>
+            <button class="btn number">5</button>
+            <button class="btn number">6</button>
+            <button class="btn operator">*</button>
 
-            <button class="btn">3</button>
-            <button class="btn">2</button>
-            <button class="btn">1</button>
-            <button class="btn">-</button>
+            <button class="btn number">3</button>
+            <button class="btn number">2</button>
+            <button class="btn number">1</button>
+            <button class="btn operator">-</button>
 
-            <button class="btn">.</button>
-            <button class="btn">0</button>
-            <button class="btn">=</button>
-            <button class="btn">+</button>
+            <button class="btn decimal">.</button>
+            <button class="btn number">0</button>
+            <button class="btn equal">=</button>
+            <button class="btn operator">+</button>
         </div>
     </div>
     <script src="./script.js"></script>
